# Rehearse

./: .gitignore  Dependencies  INSTALL  Makefile.am  Makefile.in  README.md  acinclude.m4  coin.m4  configure  configure.ac  download_dependencies.sh
.coin-or/: projDesc.xml
Rehearse/: AUTHORS  LICENSE  Makefile.am  Makefile.in  README  coin.m4  configure  configure.ac  rehearse.pc.in
Rehearse/src/: CelBoolVar.cpp  CelBoolVar.h  CelBoolVarArray.h  CelCoefficients.fwd.h  CelExpression.cpp  CelExpression.h  CelIntVar.cpp  CelIntVar.h  CelModel.cpp  CelModel.h  CelNumVar.cpp  CelNumVar.h  CelNumVarArray.h  CelVariable.cpp  CelVariable.h  CelVariableArray.cpp  CelVariableArray.h  Makefile.am  Makefile.in  RehearseConfig.h  config.h.in  config_rehearse.h.in  config_rehearse_default.h
Rehearse/tests/: Makefile.am  Makefile.in  testRehearse.cpp
